Display intersection points

--- a/01-motion_in_plane.ipynb
+++ b/01-motion_in_plane.ipynb
@@ -82,7 +82,8 @@
    "outputs": [],
    "source": [
     "x_uniform = uniform(t, v, t0=t0)\n",
-    "x_acc = acc(t,a)\n"
+    "x_acc = acc(t,a)\n",
+    "idx = np.argwhere(np.diff(np.sign(x_uniform - x_acc))).flatten()"
    ]
   },
   {
@@ -98,7 +99,7 @@
     "fig, ax = plt.subplots(figsize=(8,8))\n",
     "l_u, = ax.plot(t,x_uniform)\n",
     "l_a, = ax.plot(t,x_acc)\n",
-    "\n",
+    "l_int, =ax.plot(t[idx], x_acc[idx], 'ro')\n",
     "axv0 = plt.axes([0.25, 0.96, 0.50, 0.02])\n",
     "axacc = plt.axes([0.25, 0.93, 0.50, 0.02])\n",
     "axt0 = plt.axes([0.25, 0.90, 0.50, 0.02])\n",
@@ -120,9 +121,13 @@
     "    # update curve\n",
     "    x_uniform = uniform(t, v0, t0=t0)\n",
     "    x_acc = acc(t,a)\n",
+    "    idx = np.argwhere(np.diff(np.sign(x_uniform - x_acc))).flatten()\n",
+    "\n",
     "    \n",
     "    l_u.set_ydata(x_uniform)\n",
     "    l_a.set_ydata(x_acc)\n",
+    "    l_int.set_xdata(t[idx])\n",
+    "    l_int.set_ydata(x_acc[idx])\n",
     "    if rescale:\n",
     "        ax.relim()\n",
     "        ax.autoscale_view()\n",
@@ -155,6 +160,14 @@
     "ax.set_ylabel('Position [m]')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "incident-thesaurus",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
